	PR c++/79533 - C++17 ICE with temporary cast to reference

* call.c (build_over_call): Conversion to a reference prevents copy
	elision.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245538 138bc75d-0d04-0410-961f-82ee72b054a4